tests/rosetta/out/Fortran/99-bottles-of-beer.error
gfortran: exit status 1
/tmp/99-bottles-of-beer.f90:6:3:

    6 |   main()
      |   1
Error: Unclassifiable statement at (1)
