tests/rosetta/out/Fortran/99-bottles-of-beer.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program p_99_bottles_of_beer
  implicit none
    character(len=100) :: s0
    integer :: i
  main()
  contains
  recursive character(len=100) function bottles(n) result(res)
    integer, intent(in) :: n
    if ((n == 0)) then
      res = 'No more bottles'
      return
    end if
    if ((n == 1)) then
      res = '1 bottle'
      return
    end if
    write(s0,'(G0)') n
    res = s0 // ' bottles'
    return
  end function bottles
  recursive integer function main() result(res)
    i = 99
    do while ((i > 0))
      print *, bottles(i) // ' of beer on the wall'
      print *, bottles(i) // ' of beer'
      print *, 'Take one down, pass it around'
      print *, bottles((i - 1)) // ' of beer on the wall'
      i = (i - 1)
    end do
  end function main
end program p_99_bottles_of_beer
